--- a/make.env
+++ b/make.env
@@ -30,10 +30,25 @@ NEXTCLOUD_17_PHP=7.3
 
 # Nextcloud 18
 NEXTCLOUD_18_MAJOR=18
-NEXTCLOUD_18_VERSION=18.0.12
+NEXTCLOUD_18_VERSION=18.0.14
 NEXTCLOUD_18_PHP=7.3
 
 # Nextcloud 19
 NEXTCLOUD_19_MAJOR=19
-NEXTCLOUD_19_VERSION=19.0.6
+NEXTCLOUD_19_VERSION=19.0.13
 NEXTCLOUD_19_PHP=7.4
+
+# Nextcloud 20
+NEXTCLOUD_20_MAJOR=20
+NEXTCLOUD_20_VERSION=20.0.12
+NEXTCLOUD_20_PHP=7.4
+
+# Nextcloud 21
+NEXTCLOUD_21_MAJOR=21
+NEXTCLOUD_21_VERSION=21.0.4
+NEXTCLOUD_21_PHP=7.4
+
+# Nextcloud 22
+NEXTCLOUD_22_MAJOR=22
+NEXTCLOUD_22_VERSION=22.1.1
+NEXTCLOUD_22_PHP=7.4
